--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ a:visited {
 </style>
 <body>
 <h1>Guzzler829's repo</h1>
-<h3>  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829"> Click here to add Guzzler829's Repo to Cydia!
+<h3>  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829"> Click here to add Guzzler829's Repo to Cydia!</a></h3>
+<h3>  <a class="sileoLink" href="sileo://source/https://guzzler829.github.io/"> Click here to add Guzzler829's Repo to Sileo!</a></h3>
 <h3>Tweaks .deb downloads:</h3>
 <ul>
   <li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
