--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
-    <div class="row d-flex justify-content-center">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
         <a class="navbar-brand" href="index.html">Guzzler829</a>
-    </div>
-
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
+        aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigartion">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <br>
+        <form action="https://guzzler829.github.io/repo.html">
+            <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
+        </form>
+    </nav>    
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
