Messed up links in the index for bootstrap ugh

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guzzler829's Github Repo</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://guzzler829.github.io/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
@@ -19,7 +19,7 @@
             <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
         </form>
     </nav>    
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="https://guzzler829.github.io/node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://guzzler829.github.io/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
