--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
         </form>
     </nav>    
-    <script src="https://guzzler829.github.io/node_modules/jquery/dist/jquery.js"></script>
-    <script src="https://guzzler829.github.io/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="https://raw.githubusercontent.com/Guzzler829/guzzler829.github.io/master/node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://raw.githubusercontent.com/Guzzler829/guzzler829.github.io/master/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
