--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guzzler829's Github Repo</title>
+    <style>
+        body {
+            font-family: "Arial", sans-serif;
+            background-color: #333;
+            color: #eee;
+        }
+        a:link {
+            color: #68b2e3;
+        }
+        a:visited {
+            color: #7d68e3;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
