Overhal of the html pages - fixed links

--- a/repo.html
+++ b/repo.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
-			<a class="navbar-brand" href="index.html">Guzzler829</a>
+			<a class="navbar-brand" href="https://guzzler829.github.io/">Guzzler829</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
 			aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigartion">
 				<span class="navbar-toggler-icon"></span>
