--- a/repo.html
+++ b/repo.html
@@ -16,25 +16,29 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">		
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
-			<a class="navbar-brand" href="https://guzzler829.github.io/">Guzzler829</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
-			aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigartion">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<br>
-			<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
-				<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
-			</form>
-			<form action="sileo://source/https://guzzler829.github.io/">
-				<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
-			</form>
-		</nav>
-		<h3>Tweaks .deb downloads:</h3>
-		<ul>	
-			<li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
-			<li><a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a></li>
-		</ul>
+		<div class="row d-flex justify-content-center">
+			<div class="col-6">
+				<nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
+					<a class="navbar-brand" href="https://guzzler829.github.io/">Guzzler829</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
+					aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigartion">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<br>
+					<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
+						<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
+					</form>
+					<form action="sileo://source/https://guzzler829.github.io/">
+						<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
+					</form>
+				</nav>
+				<h3>Tweaks .deb downloads:</h3>
+				<ul>	
+					<li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
+					<li><a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a></li>
+				</ul>
+			</div>
+		</div>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
