--- a/repo.html
+++ b/repo.html
@@ -24,14 +24,16 @@
 					aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigartion">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<br>
+				</nav>
+				<br>
+				<center>
 					<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
 						<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
 					</form>
 					<form action="sileo://source/https://guzzler829.github.io/">
 						<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
 					</form>
-				</nav>
+				</center>
 				<h3>Tweaks .deb downloads:</h3>
 				<ul>	
 					<li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
