--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
                 </button>
                 <br>
             </nav>
-            <center>
-                <form action="https://guzzler829.github.io/repo.html">
-                    <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
-                </form>
-            </center>
+            <div class="card">
+                <center>
+                    <form action="https://guzzler829.github.io/repo.html">
+                        <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
+                    </form>
+                </center>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
