--- a/repo.html
+++ b/repo.html
@@ -26,19 +26,21 @@
 					</button>
 				</nav>
 				<br>
-				<center>
-					<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
-						<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
-					</form>
-					<form action="sileo://source/https://guzzler829.github.io/">
-						<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
-					</form>
-				</center>
-				<h3>Tweaks .deb downloads:</h3>
-				<ul>	
-					<li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
-					<li><a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a></li>
-				</ul>
+				<div class="card"></div>
+					<center>
+						<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
+							<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
+						</form>
+						<form action="sileo://source/https://guzzler829.github.io/">
+							<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
+						</form>
+					</center>
+					<h3>Tweaks .deb downloads:</h3>
+					<ul>	
+						<li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
+						<li><a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
