Made html pages more elegant

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </nav>
             <div class="card">
                 <center>
+                    <h3>Here are some things I've made:</h3>
+                    <br>
                     <form action="https://guzzler829.github.io/repo.html">
                         <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
                     </form>
