Made html pages more elegant - final

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="row d-flex justify-content-center">
-        <div class="col-6">
+        <div class="col-8">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
                 <a class="navbar-brand" href="https://guzzler829.github.io/">Guzzler829</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
@@ -33,11 +33,13 @@
             </nav>
             <div class="card">
                 <center>
-                    <h3>Here are some things I've made:</h3>
-                    <br>
-                    <form action="https://guzzler829.github.io/repo.html">
-                        <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
-                    </form>
+                    <div style="padding: 15px;">
+                        <h3>Here are some things I've made:</h3>
+                        <br>
+                        <form action="https://guzzler829.github.io/repo.html">
+                            <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
+                        </form>
+                        </div>
                 </center>
             </div>
         </div>
