--- a/repo.html
+++ b/repo.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div class="row d-flex justify-content-center">
-			<div class="col-6">
+			<div class="col-8">
 				<nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
 					<a class="navbar-brand" href="https://guzzler829.github.io/">Guzzler829</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
@@ -27,19 +27,21 @@
 					</button>
 				</nav>
 				<br>
-				<div class="card"></div>
+				<div class="card">
 					<center>
-						<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
-							<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
-						</form>
-						<form action="sileo://source/https://guzzler829.github.io/">
-							<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
-						</form>
-						<h3>Tweaks .deb downloads:</h3>
-						<ul>	
-							<li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
-							<li><a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a></li>
-						</ul>
+						<div style="padding: 15px;">
+							<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
+								<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
+							</form>
+							<form action="sileo://source/https://guzzler829.github.io/">
+								<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
+							</form>
+							<h3>Tweaks .deb downloads:</h3>
+							<ul>	
+								<li><a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a></li>
+								<li><a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a></li>
+							</ul>
+						</div>
 					</center>
 				</div>
 			</div>
