--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <style>
         body {
             font-family: "Arial", sans-serif;
-            background-color: #333;
-            color: #eee;
+            background-color: #333 !important;
+            color: #eee !important;
         }
         a:link {
             color: #68b2e3;
         }
         a:visited {
             color: #7d68e3;
+        }
+        #mainCard {
+            background-color: #444 !important;
+            color: #eee !important;
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -31,7 +35,7 @@
                 </button>
                 <br>
             </nav>
-            <div class="card">
+            <div id="mainCard" class="card">
                 <center>
                     <div style="padding: 15px;">
                         <h3>Here are some things I've made:</h3>
