--- a/index.html
+++ b/index.html
@@ -4,52 +4,137 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guzzler829's Github Repo</title>
-    <style>
-        body {
-            font-family: "Arial", sans-serif;
-            background-color: #333 !important;
-            color: #eee !important;
-        }
-        a:link {
-            color: #68b2e3;
-        }
-        a:visited {
-            color: #7d68e3;
-        }
-        #mainCard {
-            background-color: #444 !important;
-            color: #eee !important;
-        }
-    </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Guzzler829</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-dark.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-print.min.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="row d-flex justify-content-center">
-        <div class="col-8">
-            <nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
-                <a class="navbar-brand" href="https://guzzler829.github.io/">Guzzler829</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
-                aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigartion">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <br>
-            </nav>
-            <div id="mainCard" class="card">
-                <center>
-                    <div style="padding: 15px;">
-                        <h3>Here are some things I've made:</h3>
-                        <br>
-                        <form action="https://guzzler829.github.io/repo.html">
-                            <button type="submit" class="btn btn-primary">Jailbreak Repo</button>
-                        </form>
+<body class="bootstrap">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-themed">
+            <a class="navbar-brand" href="#">Guzzler829</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="repo.html">Jailbreak Repo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/Guzzler829/">GitHub Page</a>
+                    </li>
+                </ul>
+                <div class="nav-link">Dark mode:</div>
+                <label class="switch nav nav-center">
+                    <input id="darkModeSwitch" type="checkbox" onclick="darkModeToggle()">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="row d-flex justify-content-center">
+            <div class="col">
+                <!-- This is the left side column. I'm leaving it blank for now -->
+            </div>
+            <div class="col-8" id="main-body">
+
+                <h1 id="welcomeText">Welcome to Guzzler829's Repo</h1>
+
+                <div class="row justify-content-around aboutRow">
+                    <div class="col-8">
+                        <h3 class="subHeading">
+                            About me:
+                        </h3>
+                        <p class="aboutParagraph">
+                            I love music. I play the guitar, bass guitar, ukulele, bagpipes, and a few other instruments. I love cooking and baking, and I work as a baker. Learning languages has been a favorite passtime of mine, and I speak Esperanto and some German. I'd love to travel to Germany and Austria someday. My dream job is to be a US Senator, but that's probably in the distant future. Someday, I hope to live out west, probably in Colorado. Programming is also a big interest of mine— I've been programming since I was about 10 years old, and lately I've gotten much better at it. I've been making iOS tweaks and webpages lately.
+                        </p>
+                        <p class="aboutParagraph">
+                            Currently (May 2022), I am taking a coding boot camp with <a href="https://www.promineotech.com/">Promineo Tech</a>. I hope to get a job in front-end development sometime soon after I finish the boot camp. So far in the boot camp, I've learned the fundamentals of JavaScript, how to make webpages with HTML, how to style webpages with CSS, Bootstrap, and JQuery. Lately I've been working on CSS animations (see below!) and getting better at using Bootstrap. Soon, I'll be learning to use React.JS. I'm excited to enter the field of front-end development, as I've been enjoying the boot camp quite a bit.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <div class="imageContainer">
+                            <img src="img/me-and-annie.png" alt="A picture of myself and my dog in front of me." id="meAndAnnie" /><br />
+                            <span class="caption">Me and my dog Annie</span>
                         </div>
-                </center>
+                    </div>
+                </div>
+                <div class="jumbotron myJumbotron">
+                    <div class="row revealItems">
+                        <div class="col-3">
+                            <div class="container" alt="An animation of a coffee cup">
+                                <div class="steamContainer">
+                                    <div class="steam steam1"></div>
+                                    <div class="steam steam2"></div>
+                                    <div class="steam steam3"></div>
+                                </div>
+                                <div class="cup">
+                                    <div class="bubbles bubble-1"></div>
+                                    <div class="bubbles bubble-2"></div>
+                                    <div class="bubbles bubble-3"></div>
+                                </div>
+                            </div>            
+                        </div>
+                        <div class="col-9 textContainer">
+                            <h1 class="display-4 slideIn">Buy me a coffee?</h1>
+                            <p class="lead moreText">I'd appreciate it greatly.</p>
+                            <hr class="my-4">
+                            <p class="moreText">Thank you for donating. <br /> You can also give to my cashapp: $guzzler1</p>
+                            <p class="lead jumbotronSubText moreText">
+                                <a class="btn btn-primary btn-lg" href="https://www.buymeacoffee.com/guzzler829" role="button">Buy me a coffee</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="centerText">
+                    <h3 class="subHeading">All my socials:</h3>
+                </div>
+                <div class="row justify-content-around">
+                    <div class="col socialMediaImages">
+                        <div class="centeredContainer">
+                            <a href="https://twitter.com/theguzzler829">
+                                <img src="img/twitter.png" class="img-fluid" /><br />
+                                @theguzzler829
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col socialMediaImages">
+                        <div class="centeredContainer">
+                            <a href="https://www.linkedin.com/in/guzzler/">
+                                <img src="img/linkedin.png" class="img-fluid" /><br />
+                                August Johnson
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col socialMediaImages">
+                        <div class="centeredContainer">
+                            <a href="https://www.reddit.com/user/Guzzler829">
+                                <img src="img/reddit.png" class="img-fluid" /><br />
+                                u/Guzzler829
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col">
+                <!-- This is the right side column. I'm leaving it blank for now -->
             </div>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </main>
+    <footer>
+        <p>©2022</p> 
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
