--- a/repo.html
+++ b/repo.html
@@ -1,57 +1,109 @@
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">		
-		<style>
-			body {
-				font-family: "Arial", sans-serif;
-				background-color: #333 !important;
-				color: #eee !important;
-			}
-			a:link {
-				color: #68b2e3;
-			}
-			a:visited {
-				color: #7d68e3;
-			}
-			#mainCard {
-				background-color: #444 !important;
-				color: #eee !important;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="row d-flex justify-content-center">
-			<div class="col-8">
-				<nav class="navbar navbar-expand-sm navbar-dark bg-dark"></nav>
-					<a class="navbar-brand" href="https://guzzler829.github.io/">Guzzler829</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
-					aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigartion">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-				</nav>
-				<br>
-				<div id="mainCard" class="card">
-					<center>
-						<div style="padding: 15px;">
-							<form action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guzzler829</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-dark.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@1.0.0/dist/css/toggle-bootstrap-print.min.css" />
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="bootstrap">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-themed">
+            <a class="navbar-brand" href="#">Guzzler829</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="repo.html">Jailbreak Repo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/Guzzler829/">GitHub Page</a>
+                    </li>
+                </ul>
+                <div class="nav-link">Dark mode:</div>
+                <label class="switch nav nav-center">
+                    <input id="darkModeSwitch" type="checkbox" onclick="darkModeToggle()">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="row d-flex justify-content-center">
+            <div class="col-9" id="main-body">
+
+                <h1 id="welcomeText">Welcome to Guzzler829's Repo</h1>
+
+                <div class="row justify-content-around aboutRow">
+                    <div class="col-8">
+                        <div>
+							<form class="repoButton" action="cydia://url/https://cydia.saurik.com/api/share#?source=guzzler829">
 								<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Cydia!</button>
 							</form>
-							<form action="sileo://source/https://guzzler829.github.io/">
+							<form class="repoButton" action="sileo://source/https://guzzler829.github.io/">
 								<button type="submit" class="btn btn-primary">Click here to add Guzzler829's Repo to Sileo!</button>
 							</form>
 							<h3>Tweaks .deb downloads:</h3>	
-							<a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a>
-							<br>
-							<a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a>
+							<ul>
+								<li>
+									<a href="https://github.com/Guzzler829/repo/blob/main/debs/com.guzzler.movepagedots2_1.0+debug_iphoneos-arm.deb?raw=true">MovePageDots</a>
+								</li>
+								<br>
+								<li>
+									<a href="https://github.com/Guzzler829/guzzler829.github.io/blob/master/debs/com.guzzler.batterybar_1.0-84+debug_iphoneos-arm.deb?raw=true">BatteryBar</a>
+								</li>
+							</ul>
 						</div>
-					</center>
+						<div class="centerText">
+							<h3 class="subHeading">All my socials:</h3>
+						</div>
+						<div class="row justify-content-around">
+							<div class="col socialMediaImagesNoAnimate">
+								<div class="centeredContainer">
+									<a href="https://twitter.com/theguzzler829">
+										<img src="img/twitter.png" class="img-fluid" /><br />
+										@theguzzler829
+									</a>
+								</div>
+							</div>
+							<div class="col socialMediaImagesNoAnimate">
+								<div class="centeredContainer">
+									<a href="https://www.linkedin.com/in/guzzler/">
+										<img src="img/linkedin.png" class="img-fluid" /><br />
+										August Johnson
+									</a>
+								</div>
+							</div>
+							<div class="col">
+								<div class="centeredContainer socialMediaImagesNoAnimate">
+									<a href="https://www.reddit.com/user/Guzzler829">
+										<img src="img/reddit.png" class="img-fluid" /><br />
+										u/Guzzler829
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-	</body>
+    </main>
+    <footer>
+        <p>©2022</p> 
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+</body>
 </html>
