Fixed index.html for mobile and improved it for desktop. -Forgot to make change the script tag from my local install of mobile-detect to a server-hosted one.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         <p class="centerText">©2022</p> 
     </footer>
     <!-- Mobile browser detector -->
-    <script src="node_modules/mobile-detect/mobile-detect.js"></script>
+    <!-- <script src="node_modules/mobile-detect/mobile-detect.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
 
     <script src="script.js"></script>
 </body>
