--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
     <main>
         <div class="row justify-content-center">
-            <div id="main-body">
+            <div class="main-body">
                 <h1 id="welcomeText">Welcome to Guzzler829's Repo</h1>
 
                 <div class="row justify-content-around aboutRow">
