Added cookie warninig.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="alert alert-primary alert-dismissable fade show" role="alert">
             This site uses cookies.
-            <button type="button" class="xButton" data-bs-dismiss="alert" aria-label="Close" style="position: absolute; right: 0px; padding-right: 10px;"><img src="img/x.png" width="24px" height="auto"a /></button>
+            <button type="button" class="xButton" data-bs-dismiss="alert" aria-label="Close" style="position: absolute; right: 0px; padding-right: 10px;"><img src="img/x.png" class="xButton" width="24px" height="auto"a /></button>
         </div>
         <nav class="navbar navbar-expand-lg navbar-themed">
             <a class="navbar-brand" href="#">Guzzler829</a>
