Finishing touches on paragraphs

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                         <h3 class="subHeading">
                             About me:
                         </h3>
-                        <p>
+                        <p class="paragraph">
                             I love music. I play the guitar, bass guitar, ukulele, bagpipes, and a few other instruments. I love cooking and baking, and I work as a baker. Learning languages has been a favorite passtime of mine, and I speak Esperanto and some German. I'd love to travel to Germany and Austria someday. My dream job is to be a US Senator, but that's probably in the distant future. Someday, I hope to live out west, probably in Colorado. Programming is also a big interest of mine— I've been programming since I was about 10 years old, and lately I've gotten much better at it. I've been making iOS tweaks and webpages lately.
                         </p>
-                        <p>
+                        <p class="paragraph">
                             Currently (May 2022), I am taking a coding boot camp with <a href="https://www.promineotech.com/">Promineo Tech</a>. I hope to get a job in front-end development sometime soon after I finish the boot camp. So far in the boot camp, I've learned the fundamentals of JavaScript, how to make webpages with HTML, how to style webpages with CSS, Bootstrap, and JQuery. Lately I've been working on CSS animations (see below!) and getting better at using Bootstrap. Soon, I'll be learning to use React.JS. I'm excited to enter the field of front-end development, as I've been enjoying the boot camp quite a bit.
                         </p>
                     </div>
