Fixed the script to have iPads included in the mobile detection. Don't look at the code plaese Dx >.<

--- a/index.html
+++ b/index.html
@@ -72,6 +72,35 @@
                         </div>
                     </div>
                 </div>
+                <h3 class="centerText">Causes I Support</h3>
+                <div class="row justify-content-around worthyCauses">
+                    
+                    <div class="col card">
+                        <a href="https://chosenwithamission.org/"><img class="card-img-top" src="https://images.squarespace-cdn.com/content/v1/599f046237c581278a9da91e/43a72af8-9575-4f11-ba65-c4f2ad84011f/2021+CWAM+logo.jpg" alt="Card image cap" /></a> 
+                        <div class="card-body">
+                            <h5 class="card-title">Chosen With A Mission</h5>
+                            <p class="card-text">Chosen With A Mission is a 501(c)3 non-profit organization that I am a part of which has achieved much for the Chosen Junior School in Matugga, Uganda, run by James Kintu. I have been to the school three times now, but in 2020, we could not travel due to COVID-19. The pandemic has taken a major toll on much of Africa, including Uganda. This has resulted in the children being out of school for the last two years. Any amount you would like to donate is much appreciated.</p>
+                            <a href="https://chosenwithamission.org/" class="btn btn-primary card-button">Go To Chosen With A Mission's Website</a>
+                        </div>
+                    </div>
+                    <div class="col card">
+                        <a href="https://crisisrelief.un.org/ukraine-crisis"><img class="card-img-top ukraine-img" src="https://raisely-images.imgix.net/un-crisis-relief/uploads/ukraine-cover-1-jpg-7b1645.jpg" alt="Card image cap" /></a>
+                        <div class="card-body">
+                            <h5 class="card-title">The UN Crisis Relief Fund for Ukraine</h5>
+                            <p class="card-text">If you follow the news at all, you know what's happening in Ukraine. If you don't you, probably are wondering why gas prices are so high.</p>
+                            <a href="https://crisisrelief.un.org/ukraine-crisis" class="btn btn-primary card-button">Help Ukraine</a>
+                        </div>
+                    </div>
+                    <div class="col card">
+                        <img class="card-img-top" src="" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary card-button">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="jumbotron myJumbotron">
                     <div class="row revealItems">
                         <div class="col-2" alt="An animation of a coffee cup">
