I'm not good at formatting things with bootstrap. I fixed the columns for mobile by changing them to col-sm

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h1 id="welcomeText">Welcome to Guzzler829's Repo</h1>
 
                 <div class="row justify-content-around aboutRow">
-                    <div class="col-9 aboutContainer">
+                    <div class="col-sm-9 aboutContainer">
                         <h3 class="subHeading">
                             About me:
                         </h3>
@@ -65,7 +65,7 @@
                             Currently (May 2022), I am taking a coding boot camp with <a href="https://www.promineotech.com/">Promineo Tech</a>. I hope to get a job in front-end development sometime soon after I finish the boot camp. So far in the boot camp, I've learned the fundamentals of JavaScript, how to make webpages with HTML, how to style webpages with CSS, Bootstrap, and JQuery. Lately I've been working on CSS animations (see below!) and getting better at using Bootstrap. Soon, I'll be learning to use React.JS. I'm excited to enter the field of front-end development, as I've been enjoying the boot camp quite a bit.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-sm">
                         <div class="imageContainer">
                             <img src="img/me-and-annie.png" alt="A picture of myself and my dog in front of me." id="meAndAnnie" /><br />
                             <span class="caption">Me and my dog Annie</span>
@@ -75,7 +75,7 @@
                 <h3 class="centerText">Causes I Support</h3>
                 <div class="row justify-content-around worthyCauses">
                     
-                    <div class="col card">
+                    <div class="col-sm card">
                         <a href="https://chosenwithamission.org/"><img class="card-img-top" src="https://images.squarespace-cdn.com/content/v1/599f046237c581278a9da91e/43a72af8-9575-4f11-ba65-c4f2ad84011f/2021+CWAM+logo.jpg" alt="Card image cap" /></a> 
                         <div class="card-body">
                             <h5 class="card-title">Chosen With A Mission</h5>
@@ -85,7 +85,7 @@
                             <a href="https://chosenwithamission.org/" class="btn btn-primary card-button">Go To Chosen With A Mission's Website</a>
                         </div>
                     </div>
-                    <div class="col card">
+                    <div class="col-sm card">
                         <a href="https://crisisrelief.un.org/ukraine-crisis"><img class="card-img-top ukraine-img" src="https://raisely-images.imgix.net/un-crisis-relief/uploads/ukraine-cover-1-jpg-7b1645.jpg" alt="Card image cap" /></a>
                         <div class="card-body">
                             <h5 class="card-title">The UN Crisis Relief Fund for Ukraine</h5>
@@ -99,7 +99,7 @@
 
                 <div class="jumbotron myJumbotron">
                     <div class="row revealItems">
-                        <div class="col-2" alt="An animation of a coffee cup">
+                        <div class="col-sm-2" alt="An animation of a coffee cup">
                             <div class="container" alt="An animation of a coffee cup">
                                 <div class="steamContainer">
                                     <div class="steam steam1"></div>
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col textContainer">
+                        <div class="col-sm textContainer">
                             <h1 class="display-6 slideIn">Buy me a coffee?</h1>
                             <p class="lead moreText">I'd appreciate it greatly.</p>
                             <hr class="my-4">
