--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- My style -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bootstrap">
     <header>
@@ -35,6 +35,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="repo.html">Jailbreak Repo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="animations.html">CSS Animations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/Guzzler829/">GitHub Page</a>
