--- a/repo.html
+++ b/repo.html
@@ -17,7 +17,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- My style -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bootstrap">
     <header>
@@ -26,17 +26,20 @@
             <button type="button" class="xButton" data-bs-dismiss="alert" aria-label="Close" style="position: absolute; right: 0px; padding-right: 10px;"><img src="img/x.png" class="xButton" width="24px" height="auto"a /></button>
         </div>
         <nav class="navbar navbar-expand-lg navbar-themed">
-            <a class="navbar-brand" href="#">Guzzler829</a>
+            <a class="navbar-brand" href="index.html">Guzzler829</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="repo.html">Jailbreak Repo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="animations.html">CSS Animations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/Guzzler829/">GitHub Page</a>
